@@ -11,40 +11,43 @@ import net.minecraft.client.multiplayer.ClientLevel;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.core.NonNullList;
+import net.minecraft.core.component.DataComponents;
 import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.ListTag;
 import net.minecraft.network.chat.Component;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.resources.Identifier;
+import net.minecraft.util.ProblemReporter;
 import net.minecraft.world.ContainerHelper;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.item.BlockItem;
-import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.TooltipFlag;
+import net.minecraft.world.item.component.TooltipDisplay;
+import net.minecraft.world.item.component.TypedEntityData;
 import net.minecraft.world.item.context.BlockPlaceContext;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
-import org.jetbrains.annotations.NotNull;
+import net.minecraft.world.level.storage.TagValueInput;
 import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.NonNull;
 
-import java.util.List;
+import java.util.function.Consumer;
 
 public class SteamerItem extends BlockItem {
-    public static final ResourceLocation HAS_ITEMS = new ResourceLocation(KaleidoscopeCookery.MOD_ID, "has_items");
+    public static final Identifier HAS_ITEMS = Identifier.fromNamespaceAndPath(KaleidoscopeCookery.MOD_ID, "has_items");
     private static final int NONE = 0;
     private static final int HAS = 1;
 
     public SteamerItem() {
-        super(ModBlocks.STEAMER, new Item.Properties());
+        super(ModBlocks.STEAMER, new Properties());
     }
 
     @Override
-    protected boolean placeBlock(BlockPlaceContext context, @NotNull BlockState state) {
+    protected boolean placeBlock(BlockPlaceContext context, BlockState state) {
         Level level = context.getLevel();
         Direction face = context.getClickedFace();
         BlockPos clickedPos = context.getClickedPos();
-        // 点击顶部和侧面才能放置
+        // 点击顶部才能放置
         if (face != Direction.UP) {
             return false;
         }
@@ -52,11 +55,11 @@ public class SteamerItem extends BlockItem {
         ItemStack stack = context.getItemInHand();
         if (stack.is(this) && stack.getCount() == 1) {
             if (blockEntity instanceof SteamerBlockEntity steamer)
-                steamer.mergeItem(stack);
+                steamer.mergeItem(stack, context.getLevel());
             else {
-                CompoundTag data = stack.getOrCreateTagElement(BlockItem.BLOCK_ENTITY_TAG);
+                CompoundTag data = stack.getOrDefault(DataComponents.BLOCK_ENTITY_DATA, TypedEntityData.of(ModBlocks.STEAMER_BE, new CompoundTag())).copyTagWithoutId();
                 NonNullList<ItemStack> items = NonNullList.withSize(8, ItemStack.EMPTY);
-                ContainerHelper.loadAllItems(data, items);
+                ContainerHelper.loadAllItems(TagValueInput.create(ProblemReporter.DISCARDING, level.registryAccess(), data), items);
                 if (!items.get(4).isEmpty()) { return context.getLevel().setBlock(context.getClickedPos(), state.setValue(SteamerBlock.HALF, false), 11); }
             }
         }
@@ -64,24 +67,29 @@ public class SteamerItem extends BlockItem {
     }
 
     @Override
-    public void kjs$setMaxStackSize(int i) {
-        super.kjs$setMaxStackSize(i);
+    public int getDefaultMaxStackSize() {
+        if (this.getDefaultInstance().has(DataComponents.BLOCK_ENTITY_DATA)) {
+            return 1;
+        }
+        return super.getDefaultMaxStackSize();
     }
 
     @Environment(EnvType.CLIENT)
     public static float getTexture(ItemStack stack, @Nullable ClientLevel level, @Nullable LivingEntity entity, int seed) {
-        CompoundTag data = BlockItem.getBlockEntityData(stack);
-        if (data != null) {
+        CompoundTag data = stack.getOrDefault(DataComponents.BLOCK_ENTITY_DATA, TypedEntityData.of(ModBlocks.STEAMER_BE, new CompoundTag())).copyTagWithoutId();
+        if (stack.has(DataComponents.BLOCK_ENTITY_DATA)) {
             NonNullList<ItemStack> items = NonNullList.withSize(8, ItemStack.EMPTY);
-            ContainerHelper.loadAllItems(data, items);
-            if (!items.get(0).isEmpty() || !items.get(4).isEmpty())
-                return HAS;
+            if (level != null) {
+                ContainerHelper.loadAllItems(TagValueInput.create(ProblemReporter.DISCARDING, level.registryAccess(), data), items);
+                if (!items.getFirst().isEmpty() || !items.get(4).isEmpty())
+                    return HAS;
+            }
         }
         return NONE;
     }
 
     @Override
-    public void appendHoverText(@NotNull ItemStack stack, @Nullable Level level, List<Component> tooltip, @NotNull TooltipFlag flag) {
-        tooltip.add(Component.translatable("tooltip.kaleidoscope_cookery.steamer").withStyle(ChatFormatting.GRAY));
+    public void appendHoverText(@NonNull ItemStack stack, @NonNull TooltipContext tooltip, @NonNull TooltipDisplay tooltipDisplay, @NonNull Consumer<Component> consumer, @NonNull TooltipFlag tooltipFlag) {
+        consumer.accept(Component.translatable("tooltip.kaleidoscope_cookery.steamer").withStyle(ChatFormatting.GRAY));
     }
 }
